--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <form class="border-2 border-purple-600  rounded-2xl p-9">
 <div>
     <label for="">Mobile Number</label><br>
-    <input type="text" id="phone" placeholder="Phone Number" class="input input-lg border-2 focus:outline-none focus:border-[#0874f2]  bg-[##f4f5f7] mt-3 rounded-full" />
+    <input type="text" id="phone" placeholder="11 Digit Phone Number" class="input input-lg border-2 focus:outline-none focus:border-[#0874f2]  bg-[##f4f5f7] mt-3 rounded-full" />
 </div>
 <div class="mt-5">
     <label for="">4 Digit Pin</label><br>
